crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_three.ts_function_FunctionDeclarationID(57).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_45
