crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_if_else_two.ts_function_FunctionDeclarationID(49).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_34
block_34 -> [block_40, block_42, ]
block_40 -> [block_41, ]
block_42 -> [block_41, ]
