crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow.ts_function_FunctionDeclarationID(56).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_22
block_22 -> [block_32, ]
block_32 -> [block_35, block_41, ]
block_35 -> [block_32, ]
