crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow.ts_function_FunctionDeclarationID(60).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_32
block_32 -> [block_42, ]
block_42 -> [block_45, block_51, ]
block_45 -> [block_42, ]
