crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow_and_move.ts_function_FunctionDeclarationID(21).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_15
block_15 -> [block_20, ]
block_20 -> [block_23, block_29, ]
block_23 -> [block_20, ]
