crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow_and_move.ts_function_FunctionDeclarationID(51).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_22
block_22 -> [block_27, ]
block_27 -> [block_30, block_36, ]
block_30 -> [block_27, ]
