crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_loop_borrow_and_move.ts_function_FunctionDeclarationID(55).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_34
block_34 -> [block_39, ]
block_39 -> [block_42, block_48, ]
block_42 -> [block_39, ]
